--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
         "algoliasearch": "^3.33.0",
         "dotenv": "^8.0.0",
         "firebase-admin": "~7.0.0",
-        "firebase-functions": "^2.3.0"
+        "firebase-functions": "^2.3.0",
+        "lodash": "^4.17.11"
     },
     "devDependencies": {
         "tslint": "^5.12.0",
