--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npm": ">= 5.0.0"
   },
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "7.2.8",
     "@angular/common": "7.2.8",
     "@angular/compiler": "7.2.8",
@@ -77,6 +78,7 @@
     "rxjs": "6.4.0",
     "time-ago-pipe": "^1.3.2",
     "typescript-map": "0.0.7",
+    "underscore": "^1.9.1",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.29"
   },
@@ -90,6 +92,7 @@
     "@angular/material": "7.3.3",
     "@ismaestro/ngx-example-library": "1.0.0",
     "@ngx-i18nsupport/ngx-i18nsupport": "1.1.2",
+    "@types/googlemaps": "^3.30.20",
     "@types/html2canvas": "0.0.35",
     "@types/jasmine": "3.3.9",
     "@types/jasminewd2": "2.0.6",
