--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^8.0.0",
         "firebase-admin": "~7.0.0",
         "firebase-functions": "^2.3.0",
+        "firebase-functions-test": "^0.1.6",
         "lodash": "^4.17.11"
     },
     "devDependencies": {
