--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "ack-angular-webcam": "^1.9.3",
     "algoliasearch": "^3.33.0",
     "angular-bootstrap-md": "^7.4.4",
+    "angular-instantsearch": "^2.2.2",
     "angular2-hotkeys": "^2.1.4",
     "angularfire2": "^5.1.2",
     "chart.js": "^2.5.0",
@@ -65,7 +66,10 @@
     "core-js": "2.6.5",
     "express": "4.16.4",
     "firebase": "5.8.4",
+    "firebase-admin": "^7.4.0",
+    "firebase-functions": "^2.3.1",
     "foundation-sites": "^6.5.3",
+    "instantsearch.js": "^3.5.1",
     "ng-keyboard-shortcuts": "^7.0.8",
     "ng2-file-drop": "^5.0.0",
     "ng2-file-upload": "^1.3.0",
@@ -99,7 +103,9 @@
     "@types/node": "11.11.0",
     "bowser": "2.1.0",
     "codelyzer": "4.5.0",
+    "concat": "^1.0.3",
     "coveralls": "3.0.3",
+    "firebase-functions-test": "^0.1.6",
     "fs": "0.0.1-security",
     "hammerjs": "^2.0.8",
     "html2canvas": "1.0.0-alpha.12",
