--- a/package.json
+++ b/package.json
@@ -96,8 +96,8 @@
         "@angular-devkit/build-angular": "0.13.5",
         "@angular-devkit/build-ng-packagr": "0.13.5",
         "@angular/cdk": "^7.3.3",
-        "@angular/cli": "7.3.5",
-        "@angular/compiler-cli": "7.2.8",
+        "@angular/cli": "^8.0.1",
+        "@angular/compiler-cli": "^7.2.8",
         "@angular/language-service": "7.2.8",
         "@angular/material": "^7.3.3",
         "@ismaestro/ngx-example-library": "1.0.0",
