--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "angularfire2": "^5.2.1",
     "chart.js": "^2.8.0",
     "classlist.js": "1.1.20150312",
-    "core-js": "3.1.3",
+    "core-js": "^2.5.0",
     "css-star-rating": "^1.2.4",
     "express": "4.17.1",
     "firebase": "6.1.0",
@@ -142,7 +142,7 @@
     "tsickle": "0.35.0",
     "tslib": "1.9.3",
     "tslint": "5.17.0",
-    "typescript": "3.4.5",
+    "typescript": "^3.4.5",
     "webpack-bundle-analyzer": "3.3.2",
     "webpack-cli": "3.3.2"
   }
