--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
         "@types/jasminewd2": "2.0.6",
         "@types/node": "12.0.5",
         "bowser": "2.4.0",
-        "codelyzer": "5.1.0",
+        "codelyzer": "^5.1.0",
         "concat": "^1.0.3",
         "coveralls": "3.0.4",
         "firebase-functions-test": "^0.1.6",
@@ -117,7 +117,6 @@
         "hammerjs": "^2.0.8",
         "html2canvas": "1.0.0-rc.3",
         "http-server": "0.11.1",
-        "husky": "2.4.0",
         "jasmine-core": "3.4.0",
         "jasmine-spec-reporter": "4.2.1",
         "karma": "4.1.0",
